# wirehair

./: CMakeLists.txt  WirehairCodec.cpp  WirehairTools.cpp  WirehairTools.h  cm256.cpp  gf256.cpp
include/wirehair/: cm256.h  gf256.h  wirehair.h
tables/: HeavyRowGenerator.cpp
